[package]
name = "carousel"
version = "0.1.0"
authors = ["avitex <theavitex@gmail.com>"]
edition = "2018"
categories = ["no-std", "concurrency", "data-structures"]
description = "A cyclic data structure in contiguous memory"
documentation = "https://docs.rs/carousel"
homepage = "https://github.com/avitex/rust-carousel"
repository = "https://github.com/avitex/rust-carousel"
license = "MIT"

[features]
default = ["atomic"]
atomic = []

[dependencies]
# none :)