[package]
name = "arae"
version = "0.2.0"
authors = ["avitex <theavitex@gmail.com>"]
edition = "2018"
categories = ["no-std", "concurrency", "data-structures"]
description = "Cursed data structures"
documentation = "https://docs.rs/arae"
homepage = "https://github.com/avitex/rust-arae"
repository = "https://github.com/avitex/rust-arae"
license = "MIT"

[features]
default = ["atomic"]
atomic = []
untested = []

[dependencies]
loom = { version = "0.2", optional = true }

[dev-dependencies]
version-sync = "0.8"
