[package]
name = "arae"
version = "0.2.0"
authors = ["avitex <theavitex@gmail.com>"]
edition = "2018"
categories = ["no-std", "concurrency", "data-structures"]
description = "Cursed data structures"
documentation = "https://docs.rs/arae"
homepage = "https://github.com/avitex/rust-arae"
repository = "https://github.com/avitex/rust-arae"
license = "MIT"

[badges]
travis-ci = { repository = "avitex/rust-arae", branch = "master" }
maintenance = { status = "experimental" }

[features]
default = ["atomic", "untested"]
atomic = []
untested = []

[dependencies]
loom = { version = "0.5", optional = true }

[dev-dependencies]
trybuild = "1.0"
version-sync = "0.9"
